syntax = "proto3";

import "person.proto";
import "transaction.proto";
import "purchase.proto";
import "product.proto";
import "store.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "ApiComparisons.Shared.GRPC";

package transactions.service;

// The Transactions service definition.
service Transactions {
  // Returns a person
  rpc GetPerson (person.PersonRequest) returns (person.PersonResponse);  
  // Returns people
  rpc GetPeople (google.protobuf.Empty) returns (person.PeopleResponse);
  // Returns a person's transactions
  rpc GetPersonTransactions (transaction.TransactionRequest) returns (transaction.TransactionResponse);
  // Returns transactions
  rpc GetTransactions (google.protobuf.Empty) returns (transaction.TransactionResponse);
  // Returns a transaction's purchases
  rpc GetPurchases (purchase.PurchaseRequest) returns (purchase.PurchaseResponse);
  // Returns a purchase's product
  rpc GetProduct (product.ProductRequest) returns (product.ProductResponse);
  // Returns a product's store
  rpc GetStore (store.StoreRequest) returns (store.StoreResponse);
}
